--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -172,7 +172,7 @@
 
 \judulINA{IT Student Portal: Pemanfaatan \textit{Web Scraping} untuk Kustomisasi Portal Akademik Mahasiswa}
 
-\judulENG{IT Student Portal: Exploiting Web Scraping for Portal Akademik Mahasiswa Customization}
+\judulENG{IT Student Portal: Exploiting Web Scraping for \textit{Portal Akademik Mahasiswa} Customization}
 
 %_____________________________________________________________________________
 %=============================================================================
