--- a/doc/DokumenSkripsi/pustaka.bib
+++ b/doc/DokumenSkripsi/pustaka.bib
@@ -5,7 +5,14 @@
 	isbn = {9781617290909},
 	publisher = {Manning Publications Co.},
 	title = {Play for Java},
-	year = {2014},
+	year = {2014}
+}
+
+@book{BTI:2012,
+	author = "{Biro Teknologi Informasi UNPAR}",
+	publisher = {Biro Teknologi Informasi UNPAR},
+	title = {BUKU PANDUAN LAYANAN TIK 2012},
+	year = {2012}
 }
 
 @misc{studentportalunpar,
