--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -77,22 +77,64 @@ Pada halaman utama Portal Akademik Mahasiswa (gambar \ref{fig:3_pam_home}), terd
 		Menu Rencana Studi terdiri dari submenu: 
 		\begin{itemize}
 			\item Registrasi (FRS/PRS)\\
-			Digunakan sebagai formulir pengisian rencana studi awal (FRS) dan perubahan rencana studi (PRS). 
+			Digunakan sebagai formulir pengisian rencana studi awal (FRS) dan perubahan rencana studi (PRS) (Gambar \ref{fig:3_pam_utama_registrasi}). 			%belum relevan
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-rencanastudi}
+				\caption{Tampilan Registrasi FRS/PRS} 
+				\label{fig:3_pam_utama_registrasi}
+			\end{figure}
+			
 			\item Kartu Rencana Studi \\
-			Menampilkan informasi mata kuliah yang telah diambil melalui submenu Registrasi. Kartu Rencana Studi juga dapat dicetak melalui submenu ini. 
+			Menampilkan informasi mata kuliah yang telah diambil melalui submenu Registrasi (Gambar \ref{fig:3_pam_utama_krs}). Kartu Rencana Studi juga dapat dicetak melalui submenu ini. 
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-krs}
+				\caption{Tampilan Kartu Rencana Studi} 
+				\label{fig:3_pam_utama_krs}
+			\end{figure}
+			
 			\item Pindah Kelas MKU \\
-			Mahasiswa dapat memilih kelas yang masih tersedia di kolom Jadwal Baru dan menekan tombol ``Simpan'' untuk setiap kelas yang diubah. 
+			Mahasiswa dapat memilih kelas yang masih tersedia di kolom Jadwal Baru dan menekan tombol ``Simpan'' untuk setiap kelas yang diubah (Gambar \ref{fig:3_pam_utama_pindahmku}). 
+			%belum relevan
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-pindahmku}
+				\caption{Tampilan Pindah Kelas MKU} 
+				\label{fig:3_pam_utama_pindahmku}
+			\end{figure}
+
 		\end{itemize}
 		
 		\item \textbf{ Jadwal}\\
 		Menu Jadwal terdiri dari submenu: 
 		\begin{itemize}
-			\item Kuliah, UTS dan UAS \\
-			Submenu ini berisi tentang jadwal kuliah, UTS dan UAS yang bisa yang disusun per semester. 
+			\item Kuliah, UTS, dan UAS \\
+			Submenu ini berisi tentang jadwal kuliah, UTS dan UAS yang dapat disusun per semester (Gambar \ref{fig:3_pam_utama_jadwal}). 
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-jadwal}
+				\caption{Tampilan Jadwal Kuliah, UTS, dan UAS} 
+				\label{fig:3_pam_utama_jadwal}
+			\end{figure}
+			
 			\item MKU \\
-			Submenu ini menampilkan seluruh jadwal Mata Kuliah Umum (MKU) yang memberikan informasi tentang kelas-kelas yang dibuka oleh Pusat Kajian Humaniora (PKH). 
+			Submenu ini menampilkan seluruh jadwal Mata Kuliah Umum (MKU) yang memberikan informasi tentang kelas-kelas yang dibuka oleh Pusat Kajian Humaniora (PKH) (Gambar \ref{fig:3_pam_utama_jadwalmku}). 
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-jadwalmku}
+				\caption{Tampilan Jadwal MKU} 
+				\label{fig:3_pam_utama_jadwalmku}
+			\end{figure}
+			
 			\item Seluruh Fakultas \\
-			Fitur ini memberikan informasi mengenai jadwal-jadwal yang ada di seluruh fakultas.
+			Fitur ini memberikan informasi mengenai jadwal-jadwal yang ada di seluruh fakultas (Gambar \ref{fig:3_pam_utama_jadwalall}).
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-jadwalall}
+				\caption{Tampilan Jadwal Seluruh Fakultas} 
+				\label{fig:3_pam_utama_jadwalall}
+			\end{figure}
 		\end{itemize}
 		
 		\item \textbf{Nilai dan Indeks Prestasi}\\
@@ -100,31 +142,97 @@ Pada halaman utama Portal Akademik Mahasiswa (gambar \ref{fig:3_pam_home}), terd
 		\begin{itemize}
 			\item Riwayat per Semester \\
 			Submenu ini menampilkan informasi nilai per semester. Mahasiswa dapat melihat nilai sesuai dengan semester yang dipilih atau bisa memilih
-pilihan ``Seluruh Tahun Akademik'' untuk melihat seluruh nilai berdasarkan semester.
+pilihan ``Seluruh Tahun Akademik'' untuk melihat seluruh nilai berdasarkan semester (Gambar \ref{fig:3_pam_utama_nilai}).
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-nilai}
+				\caption{Tampilan Riwayat Per Semester} 
+				\label{fig:3_pam_utama_nilai}
+			\end{figure}
+			
 			\item Daftar Perkembangan Studi \\
-			Seluruh riwayat mata kuliah dan nilai yang pernah ditempuh ditampilkan di submenu ini. Pada bagian bawah halaman, terdapat statistik nilai dan indeks prestasi. 
+			Seluruh riwayat mata kuliah dan nilai yang pernah ditempuh ditampilkan di submenu ini (Gambar \ref{fig:3_pam_utama_dps}). Pada bagian bawah halaman, terdapat statistik nilai dan indeks prestasi (Gambar \ref{fig:3_pam_utama_dpsstat}). 
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-dps}
+				\caption{Tampilan Daftar Perkembangan Studi} 
+				\label{fig:3_pam_utama_dps}
+			\end{figure}
+			
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-dpsstat}
+				\caption{Tampilan Statistik Nilai dan IP} 
+				\label{fig:3_pam_utama_dpsstat}
+			\end{figure}
+			
 			\item Riwayat Indeks Prestasi \\
-			Menampilkan daftar riwayat indeks prestasi semester dan kumulatif setiap semester. Tampilan ini juga dilengkapi dengan grafik perkembangan. 
+			Menampilkan daftar riwayat indeks prestasi semester dan kumulatif setiap semester. Tampilan ini juga dilengkapi dengan grafik perkembangan (Gambar \ref{fig:3_pam_utama_ip}). 
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-ip}
+				\caption{Tampilan Riwayat Indeks Prestasi} 
+				\label{fig:3_pam_utama_ip}
+			\end{figure}
+			
 			\item TOEFL \\
-			Menampilkan daftar riwayat skor \textit{Test of English as Foreign Language} (TOEFL) yang pernah ditempuh. Mahasiswa diwajibkan untuk menempuh TOEFL dengan skor minimal 500.
+			Menampilkan daftar riwayat skor \textit{Test of English as Foreign Language} (TOEFL) yang pernah ditempuh (Gambar \ref{fig:3_pam_utama_toefl}). Mahasiswa diwajibkan untuk menempuh TOEFL dengan skor minimal 500.
+			
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-toefl}
+				\caption{Tampilan TOEFL} 
+				\label{fig:3_pam_utama_toefl}
+			\end{figure}
 		\end{itemize}
 		
 		\item \textbf{Pembayaran Uang Kuliah}\\
-		Menu ini berfungsi untuk melihat data tagihan pembayaran uang kuliah serta cara-cara pembayarannya.
+		Menu ini berfungsi untuk melihat data tagihan pembayaran uang kuliah serta cara-cara pembayarannya (Gambar \ref{fig:3_pam_utama_pembayaran}).
+		\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-pembayaran}
+				\caption{Tampilan Pembayaran Uang Kuliah} 
+				\label{fig:3_pam_utama_pembayaran}
+			\end{figure}
 		\end{itemize}
 		
 	\item \textbf{Informasi}\\
-		Bagian ini menampilkan informasi tentang periode-periode yang sedang aktif.
+		Bagian ini menampilkan informasi tentang periode-periode yang sedang aktif (Gambar \ref{fig:3_pam_utama_informasi}). Sebagai contoh jika ``Periode Registrasi'' diklik maka akan muncul \textit{pop up} seperti pada gambar \ref{fig:3_pam_utama_informasipop}.
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.75]{Gambar/pam-utama-informasi}
+				\caption{Tampilan Informasi} 
+				\label{fig:3_pam_utama_informasi}
+			\end{figure}
+			
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.5]{Gambar/pam-utama-infopop}
+				\caption{Tampilan \textit{Pop Up} Informasi} 
+				\label{fig:3_pam_utama_informasipop}
+			\end{figure}
 		
 	\item \textbf{Kalender}\\
-		Bagian ini menampilkan kalender masehi.
+		Bagian ini menampilkan kalender masehi (Gambar \ref{fig:3_pam_utama_kalender}).
+		\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.75]{Gambar/pam-utama-kalender}
+				\caption{Tampilan Kalender} 
+				\label{fig:3_pam_utama_kalender}
+			\end{figure}
 		
 	\item \textbf{Info Browser}\\
-		Bagian ini menampilkan informasi tentang internet \textit{browser} yang digunakan pada saat membuka Portal Akademik Mahasiswa. 
+		Bagian ini menampilkan informasi tentang internet \textit{browser} yang digunakan pada saat membuka Portal Akademik Mahasiswa (Gambar \ref{fig:3_pam_utama_infobrowser}). 
+		\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.75]{Gambar/pam-utama-infobrowser}
+				\caption{Tampilan Info Browser} 
+				\label{fig:3_pam_utama_infobrowser}
+			\end{figure}
 \end{enumerate}
 
 \section{Analisis Kebutuhan IT Student Portal}
-Dalam menganalisis kebutuhan IT Student Portal, penulis melakukan wawancara dengan 18 mahasiswa Program Studi Teknik Informatika UNPAR. Kriteria dari 18 mahasiswa tersebut yaitu lipsum. Setelah melakukan wawancara, penulis memperoleh fitur-fitur yang dibutuhkan antara lain:
+Dalam menganalisis kebutuhan IT Student Portal, penulis melakukan wawancara dengan 18 mahasiswa Program Studi Teknik Informatika UNPAR. Kriteria dari 18 mahasiswa tersebut yaitu lipsum. Setelah melakukan wawancara, penulis memperoleh fitur-fitur yang diinginkan mahasiswa antara lain:
 \begin{enumerate}
 	\item Prasyarat mata kuliah
 	\item Status perkuliahan
@@ -135,11 +243,14 @@ Dalam menganalisis kebutuhan IT Student Portal, penulis melakukan wawancara deng
 	\item Daftar email dosen
 	\item Upload CV
 \end{enumerate}
-Fitur-fitur yang akan dipilih harus memenuhi kriteria:
+
+Fitur-fitur yang akan dipilih untuk diimplementasikan harus memenuhi kriteria:
 \begin{itemize}
-	\item Dibuat untuk mempermudah penggunaan Student Portal
-	\item Didukung Student Portal
+	\item Data yang dibutuhkan dapat diambil dari Portal Akademik Mahasiwa
+	\item Fitur tidak tersedia di Portal Akademik Mahasiswa
+	\item Fitur mendukung fungsi Portal Akademik Mahasiswa sebagai sumber informasi akademik
 \end{itemize}
+
 Berdasarkan kriteria di atas dan batas waktu pembangunan aplikasi, maka akan dipilih fitur-fitur sebagai berikut:
 \begin{enumerate}
 	\item Prasyarat mata kuliah
